--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.1'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '3.3.2'
+
 }
 
 tasks.named('test') {
