--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.1'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '3.3.2'
+	implementation 'org.thymeleaf:thymeleaf:3.1.2.RELEASE'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'
 
 }
 
