--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.servlet.produce-partial-output-while-processing=false
+
+riot.api.key=RGAPI-18e2a8bf-93c8-4b3f-b86c-8b2a1f0683e1
+riot.url=https://kr.api.riotgames.com
