--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 	implementation 'org.thymeleaf:thymeleaf:3.1.2.RELEASE'
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'
 	implementation 'com.google.code.gson:gson:2.11.0'
-
+	implementation 'com.google.guava:guava:31.1-jre'
 }
 
 tasks.named('test') {
