--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'
 	implementation 'com.google.code.gson:gson:2.11.0'
 	implementation 'com.google.guava:guava:31.1-jre'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.2'
+
 }
 
 tasks.named('test') {
