--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=yupgg
 server.port = 8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/shop
+spring.datasource.url=jdbc:mysql://localhost:3306/yupGG
 
 spring.datasource.username=root
 spring.datasource.password=1234
@@ -14,3 +14,10 @@ spring.thymeleaf.servlet.produce-partial-output-while-processing=false
 
 riot.api.key=RGAPI-18e2a8bf-93c8-4b3f-b86c-8b2a1f0683e1
 riot.url=https://kr.api.riotgames.com
+
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql=trace
