--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=yupgg
-server.port = 8080
+server.port = 80
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/yupGG
 
@@ -15,9 +15,12 @@ spring.thymeleaf.servlet.produce-partial-output-while-processing=false
 riot.api.key=RGAPI-18e2a8bf-93c8-4b3f-b86c-8b2a1f0683e1
 riot.url=https://kr.api.riotgames.com
 
-spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
