--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/yupGG
 spring.datasource.username=root
 spring.datasource.password=1234
 
+spring.security.csrf.enabled=true
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
@@ -16,7 +17,7 @@ riot.api.key=RGAPI-18e2a8bf-93c8-4b3f-b86c-8b2a1f0683e1
 riot.url=https://kr.api.riotgames.com
 
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.show_sql=true
